# xrpl-data-api

./: Cargo.toml
src/: main.rs
src/handlers/: account.rs  balance_change.rs  daily_ledger.rs  ledger.rs  mod.rs  payment.rs  transaction.rs
src/models/: account.rs  balance_change.rs  daily_ledger.rs  ledger.rs  mod.rs  payment.rs  transaction.rs
src/utils/: consts.rs  errors.rs  mod.rs  params.rs
