[package]
name = "rust-data-api-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scylla = { version = "0.12.0", features = ["num-bigint-03", "chrono"] }
num-bigint = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
thiserror = "1.0.57"
